--- a/docker-compose-init.yaml
+++ b/docker-compose-init.yaml
@@ -3,9 +3,14 @@ services:
     image: nginx:latest
     container_name: nginx
     restart: unless-stopped
+    environment:
+      SERVER_NAME: ${SERVER_NAME}
+      FORTPOLIO: ${FORTPOLIO}
+      NAVIDROME: ${NAVIDROME}
+      JENKINS: ${JENKINS}
     volumes:
       - ./nginx/log:/var/log/nginx/
-      - ./nginx/conf.d/deeverse.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/conf.d/deeverse-init.conf:/etc/nginx/templates/init.conf.template
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
       - jenkins-home:/mnt/jenkins_home
@@ -26,20 +31,19 @@ services:
       - ./certbot/www:/var/www/certbot
       - ./certbot/logs:/var/log/letsencrypt
       - ./certbot/conf:/etc/letsencrypt
-      - ./nginx_reload.sh:/etc/letsencrypt/deploy_hook/nginx_reload.sh
-    ## First run: certonly --webroot -w /var/www/certbot -d dees.kr -d www.dees.kr --non-interactive --agree-tos --email tunacome@gmail.com 
-    ## This is for running the stack all-time
-    # entrypoint: >
-    #   /bin/sh -c 'trap exit TERM;
-    #   while :; do
-    #     certbot renew --webroot -w /var/www/certbot \
-    #     --deploy-hook "/SCRIPT/PATH";
-    #     sleep 1;
-    #   done'
-    ## For on-off stack, which happens to be my case
+    # Can't chain with && cuz it only runs the subsequent one on success
+    # hence the wrapper
     entrypoint: >
-      /bin/sh -c 'certbot renew --webroot -w /var/www/certbot
-      --deploy-hook /etc/letsencrypt/deploy_hook/nginx_reload.sh'
+      /bin/sh -c '
+        DONE=/var/www/certbot/.result;
+        rm -f "$$DONE";
+        certbot certonly --webroot -w /var/www/certbot 
+          -d deedo.dev -d www.deedo.dev --non-interactive --agree-tos 
+          --email tunacome@gmail.com;
+        RC=$$?;
+        date -u +%FT%TZ > "$$DONE";
+        exit $$RC
+      '
     networks:
       - deeverse_proxy
     depends_on:
