fix: fix fortpolio rewrite logic to serve from root

--- a/nginx/conf.d/deeverse-default.conf
+++ b/nginx/conf.d/deeverse-default.conf
@@ -95,9 +95,11 @@ server {
     # Fortpolio Stack
     location /fortpolio/ {
         set $backend_fortpolio ${FORTPOLIO};
-        # rewrite ^/fortpolio/(.*)$ /$1 break;
-        # proxy_pass http://$backend_fortpolio/;
+        
+        # proxy_pass http://$backend_fortpolio/; # basically the same as below?
+        rewrite ^/fortpolio/(.*)$ /$1 break;
         proxy_pass http://$backend_fortpolio;
+
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -109,10 +111,10 @@ server {
         # proxy_set_header Upgrade $http_upgrade;
         # proxy_set_header Connection "upgrade";
 
-        sub_filter_once off;
-        sub_filter 'href="/' 'href="/fortpolio/';
-        sub_filter 'src="/' 'src="/fortpolio/';
-        sub_filter 'action="/' 'action="/fortpolio/';
+        # sub_filter_once off;
+        # sub_filter 'href="/' 'href="/fortpolio/';
+        # sub_filter 'src="/' 'src="/fortpolio/';
+        # sub_filter 'action="/' 'action="/fortpolio/';
     }
 
     location = /fortpolio {
